# proprepros

./: .gitignore  LICENSE  MANIFEST.in  README.md  VERSION  my_package.py  requirements.txt  setup.cfg  setup.py
Tests/: test_main.py  test_prototype2.py
ppps/: __init__.py
ppps/lib/: main.py
ppps/res/: glob.py
ppps/test/: prototype1.py  prototype2.py
proprepros/: __init__.py
proprepros/lib/: main.py
proprepros/res/: out.c  test.ccc
proprepros/test/: prototype1.py  prototype2.py
proprepros/test/files/: test.c
