[metadata]
name = ppps
version = file: VERSION
author = TUNAPRO1234
author_email = tunagul54@gmail.com
description = pre-preprocessor for C/C++
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tunapro1234/proprepros
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8